# swagger.json
@@ -524,7 +524,7 @@
 		},
 		"/studentEvents/checkStudentEvent": {
 			"post": {
-				"operationId": "Check",
+				"operationId": "Check1",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -609,6 +609,36 @@
 						}
 					}
 				]
+			}
+		},
+		"/studentEvents/check": {
+			"put": {
+				"operationId": "Check",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"StudentEvents"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ICheckStudentEventReq"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
